# relapse

./: .coveragerc  .dockerignore  .gitignore  AUTHORS.rst  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.rst  UPGRADE.rst  book.toml  build_rust.py  flake.nix  mypy.ini  pyproject.toml  sytest-blacklist  tox.ini
.ci/: postgres-config.yaml  sqlite-config.yaml  worker-blacklist
.ci/scripts/: auditwheel_wrapper.py  calculate_jobs.py  check_lockfile.py  setup_complement_prerequisites.sh  test_export_data_command.sh  test_relapse_port_db.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  SUPPORT_REQUEST.md
.github/workflows/: docker.yml  docs-add-version-picker.yaml  docs-pr-netlify.yaml  docs-pr.yaml  docs.yaml  fix_lint.yaml  latest_deps.yml  poetry_lockfile.yaml  push_complement_image.yml  release-artifacts.yml  tests.yml  twisted_trunk.yml
changelog.d/: 1.removal  101.misc  104.misc  105.removal  111.removal  12.misc  120.misc  121.removal  122.removal  127.misc  132.misc  135.feature  136.misc  139.feature  140.feature  146.feature  16533.doc  16740.bugfix  170.misc  184.removal  186.removal  187.removal  257.misc  275.misc  276.feature  280.feature  281.feature  288.misc  294.bugfix  296.misc  297.removal  301.misc  308.removal  316.removal  317.removal  318.removal  319.removal  326.removal  327.removal  328.misc  (+28 more)
contrib/: example_log_config.yaml
contrib/cmdclient/: console.py  http.py
contrib/datagrip/: README.md  common.sql  main.sql  state.sql
contrib/docker/: README.md  docker-compose.yml
contrib/docker_compose_workers/: README.md  docker-compose.yaml
contrib/grafana/: README.md  relapse.json
contrib/graph/: graph.py  graph2.py  graph3.py
contrib/lnav/: README.md  relapse-log-format.json
contrib/prometheus/: README.md  relapse-v2.rules
contrib/purge_api/: README.md  purge_history.sh  purge_remote_media.sh
contrib/snap/: snapcraft.yaml
contrib/systemd/: README.md  log_config.yaml  matrix-relapse.service  override-hardened.conf
contrib/systemd-with-workers/: README.md
contrib/workers-bash-scripts/: create-multiple-generic-workers.md  create-multiple-stream-writers.md
debian/: .gitignore  NEWS  build_virtualenv  changelog  control  copyright  dirs  hash_password.1  hash_password.ronn  install  manage_debconf.pl  manpages  matrix-relapse-py3.config  matrix-relapse-py3.links  matrix-relapse-py3.postinst  matrix-relapse.service  register_new_matrix_user.1  register_new_matrix_user.ronn  relapse_port_db.1  relapse_port_db.ronn  relapse_review_recent_signups.1  relapse_review_recent_signups.ronn  rules  synctl.1  synctl.ronn  templates
debian/po/: templates.pot
demo/: start.sh
dev-docs/: conf.py  index.rst
dev-docs/modules/: federation_sender.md
develop/: 404.html  CAPTCHA_SETUP.html  application_services.html  auth_chain_difference_algorithm.html  code_style.html  consent_tracking.html  delegate.html  deprecation_policy.html  federate.html  index.html  jwt.html  log_contexts.html  manhole.html  media_repository.html  message_retention_policies.html  metrics-howto.html  openid.html  opentracing.html  password_auth_providers.html  postgres.html  print.html  replication.html  reverse_proxy.html  room_and_user_statistics.html  sample_log_config.yaml  server_notices.html  sso_mapping_providers.html  structured_logging.html  synctl_workers.html  tcp_replication.html  templates.html  turn-howto.html  upgrade.html  user_directory.html  welcome_and_overview.html  workers.html
develop/admin_api/: account_validity.html  event_reports.html  experimental_features.html  media_admin_api.html  purge_history_api.html  register_api.html  room_membership.html  rooms.html  server_notices.html  statistics.html  user_admin_api.html  version_api.html
develop/development/: cas.html  contributing_guide.html  database_schema.html  demo.html  dependencies.html  experimental_features.html  git.html  releases.html  (+3 more)
docker/: Dockerfile  Dockerfile-dhvirtualenv  Dockerfile-workers  README-testing.md  README.md  build_debian.sh  configure_workers_and_start.py  editable.Dockerfile  start.py
docs/: .sample_config_header.yaml  CAPTCHA_SETUP.md  README.md  SUMMARY.md  ancient_architecture_notes.md  application_services.md  architecture.md  auth_chain_difference_algorithm.md  code_style.md  consent_tracking.md  delegate.md  deprecation_policy.md  federate.md  jwt.md  log_contexts.md  manhole.md  media_repository.md  message_retention_policies.md  metrics-howto.md  openid.md  opentracing.md  password_auth_providers.md  postgres.md  presence_router_module.md  replication.md  reverse_proxy.md  room_and_user_statistics.md  sample_config.yaml  server_notices.md  spam_checker.md  sso_mapping_providers.md  structured_logging.md  synctl_workers.md  tcp_replication.md  templates.md  turn-howto.md  upgrade.md  user_directory.md  welcome_and_overview.md  workers.md
main/: 404.html  application_services.html  auth_chain_difference_algorithm.html  consent_tracking.html  delegate.html  federate.html  manhole.html  metrics-howto.html  opentracing.html  print.html  replication.html  reverse_proxy.html  room_and_user_statistics.html  server_notices.html  sso_mapping_providers.html  upgrade.html
relapse/: __init__.py  event_auth.py  notifier.py  server.py  visibility.py
remark/: __init__.py  __main__.py
rust/: Cargo.toml  build.rs
scripts-dev/: build_debian_packages.py  check-newsfragment.sh  check_locked_deps_have_sdists.py  check_pydantic_models.py  check_schema_delta.py  complement.sh  config-lint.sh  docker_update_debian_changelog.sh  dump_macaroon.py  federation_client.py  generate_sample_config.sh  lint.sh  make_full_schema.sh  mypy_relapse_plugin.py  next_github_number.sh  release.py  schema_versions.py  sign_json.py
stubs/: txredisapi.pyi
tests/: __init__.py  server.py  test_distributor.py  test_event_auth.py  test_federation.py  test_mau.py  test_phone_home.py  test_rust.py  test_server.py  test_state.py  test_terms_auth.py  test_types.py  test_visibility.py  unittest.py  utils.py
(+1016 files in other folders)
